--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "file-loader": "^4.2.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1"
   }
 }
