--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^4.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "youtube-api-search": "0.0.5"
   }
 }
